ecmascript/parser/tests/test262-error-references/fail/a7be138dfd29025e.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/a7be138dfd29025e.js:2:23
  |
2 |     { *[yield iter]() {} }
  |                       ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/a7be138dfd29025e.js:2:7
  |
2 |     { *[yield iter]() {} }
  |       ^^^^^^^^^^^^^^^

error: Expression expected
 --> $DIR/tests/test262-parser/fail/a7be138dfd29025e.js:2:7
  |
2 |     { *[yield iter]() {} }
  |       ^

